# TheTeam

./: .gitignore  QUICKSTART.md  README.md  package-lock.json  pyproject.toml  pytest.ini  setup_theteam.py
benchmarks/: bench_config.py
benchmarks/easy_problems/: benchmark_config.py  charting.py  cli.py  dataset.py  eval_utils.py  linguistic_benchmark_multi_choice.json  llm_service.py  main.py  multiple_choice.py
configs/agents/: structured-reflect.yaml  with-memory-features.yaml  with-tools.yaml
configs/benchmarks/: default_benchmark.yaml
configs/flowcharts/: agent_context_sharing.yaml  file_io_demo.yaml  io_example.yaml  io_nodes_demo.yaml  message_routing_example.yaml  multi_agent_research.yaml  refined_explicit_reflect.yaml  refined_explicit_reflect_eval.yaml  refined_reflect.yaml  simple_reflect.yaml  stepwise_reflect.yaml  teacher_student.yaml  teacher_student_looped.yaml  tool_version_check.yaml
configs/tools/: memory_config.yaml  tool_config.yaml
demos/: demo.py  memory_features_demo.py  tools_demo.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CONFIG.md  DATABASE.md  FLOWCHARTS.md  MEMORY.md  MESSAGE_ROUTING.md  MULTI_AGENT_ARCHITECTURE.md  TOOL_CALLING.md  WEB_INTERFACE.md
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/docs/: GUI_TESTING.md
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/__tests__/: setup.ts
frontend/src/components/: ConnectionStatus.tsx  CustomEdge.tsx  EdgeEditDialog.tsx  Layout.tsx  NodeMenu.tsx  ToastContainer.tsx
src/pithos/: README.md  __init__.py  __main__.py  conditions.py  config_manager.py  context.py  database_manager.py  demo.py  diagnostic.py  flowchart.py  flowchart_store.py  flownode.py  message.py  metrics.py  utils.py  validation.py
src/theteam/: __about__.py  server.py
tests/: README.md  test_agent.py  test_agent_history.py  test_agent_memory.py  test_agent_tools.py  test_benchmark_cli.py  test_benchmark_config.py  test_benchmark_dataset.py  test_benchmark_eval_utils.py  test_benchmark_llm_service.py  test_benchmark_multiple_choice.py  test_compaction_recall.py  test_compaction_steps.py  test_compaction_steps_llm.py  test_conditions.py  test_config_manager.py  test_database_manager.py  test_flowchart.py  test_flowchart_service.py  test_flowchart_store.py  test_flowchart_tool.py  test_flownode.py  test_io_nodes.py  test_memory_tool.py  test_message_routing.py  test_metrics.py  test_resource_cleanup.py  test_server.py  test_tag_suggester.py  test_tool_extractors.py  test_tools.py  test_validation.py
(+81 files in other folders)
